# crusty-neat

./: .gitattributes  Cargo.toml  LICENSE.md  README.md
config/: H1N1.mut_model.yml  crusty_test.yml  ecoli.mut_model.yml  mut_model.yml  null_template.yml
models/: mut_model.yml
src/: main.rs  utils.rs
src/utils/: cli.rs  config.rs  distributions.rs  fasta_tools.rs  fastq_tools.rs  file_tools.rs  make_reads.rs  mutate.rs  mutation.rs  mutation_model.rs  nucleotides.rs  quality_model.rs  quality_scores.rs  read_models.rs  read_old_data.rs  ref_mutation_model.rs  runner.rs  types.rs  vcf_tools.rs
varia/: convert-weights.ipynb  convert-weights.py
