[package]
name = "rusty-neat"
version = "0.2.0"
edition = "2021"
authors = ["Joshua Allen <jallen17@illinois.edu>"]

[dependencies]
rand = "0.9.0"
log = "0.4.25"
xorshift = "0.1.3"
chrono = "0.4.39"
simplelog = "0.12.2"
serde_yaml = "0.9.34"
clap = { version = "4.5.30", features = ["derive"] }
itertools = "0.14.0"
assert_fs = "1.1.2"
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["derive"] }
statrs = "0.18.0"
anyhow = "1.0.96"
rand_distr = "0.5.1"
