[package]
name = "crusty-neat"
version = "0.2.0"
edition = "2021"

[dependencies]
rand_distr = "0.5.1"
rand = { version = "0.9.0", features = ["serde"] }
log = "0.4.26"
xorshift = "0.1.3"
chrono = "0.4.40"
simplelog = "0.12.2"
serde_yaml = "0.9.34"
clap = { version = "4.5.31", features = ["derive"] }
itertools = "0.14.0"
assert_fs = "1.1.2"
serde_json = "1.0.140"
serde = { version = "1.0.218", features = ["derive"] }
statrs = "0.18.0"
anyhow = "1.0.97"
tempdir = "0.3.7"
strum_macros = "0.27.1"
strum = "0.27.1"
